--- a/client/src/main/resources/fxml/chat.fxml
+++ b/client/src/main/resources/fxml/chat.fxml
@@ -13,9 +13,9 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.image.ImageView?>
 
+<?import javafx.scene.layout.Pane?>
 <AnchorPane stylesheets="/main.css" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1"
             fx:controller="abnod.chaterr.client.ChatController">
-
     <AnchorPane fx:id="textBox" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0"
                 AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" disable="true">
         <HBox styleClass="top_panel" minHeight="40" maxHeight="40" prefHeight="40" AnchorPane.leftAnchor="0.0"
@@ -49,6 +49,9 @@
             </HBox>
         </VBox>
     </AnchorPane>
+    <Pane styleClass="helloBox" fx:id="helloBox" AnchorPane.topAnchor="0" AnchorPane.leftAnchor="0" AnchorPane.rightAnchor="0" AnchorPane.bottomAnchor="0">
+
+    </Pane>
     <AnchorPane styleClass="authBox" fx:id="authBox" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0"
                 AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
         <HBox styleClass="top_panel" minHeight="40" maxHeight="40" prefHeight="40" AnchorPane.leftAnchor="0.0"
