changed compile method;

--- a/client/src/main/resources/main.css
+++ b/client/src/main/resources/main.css
@@ -54,7 +54,7 @@ PasswordField {
 }
 
 .exit_button:hover {
-    -fx-image: url("/power30active.png");
+    -fx-image: url("/power30Active.png");
 }
 
 .min_button {
